# gax

./: .env.template  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
archive/alg_1/: Cargo.toml  fitness.rs  replace.rs  selection.rs
archive/alg_10/: Cargo.toml  lib.rs
archive/alg_2/: Cargo.toml  lib.rs
archive/alg_3/: Cargo.toml  fitness.rs  lib.rs  mutation.rs  population.rs
archive/alg_4/: lib.rs  utils.rs
archive/alg_5/: Cargo.toml  lib.rs
archive/alg_6/: Cargo.toml  lib.rs
archive/alg_7/: Cargo.toml  lib.rs  logger.rs
archive/alg_8/: Cargo.toml  lib.rs
archive/alg_9/: Cargo.toml  lib.rs
archive/n_queens/: Cargo.toml  lib.rs
archive/n_queens/encoding/: mod.rs
archive/n_queens/operators/: crossover.rs  rejection.rs
archive/n_queens/selection/: mod.rs
archive/n_queens/termination/: mod.rs
archive/n_queens/utils/: mod.rs
archive/n_queens/utils/plotter/: mod.rs
archive/n_queens/utils/rerun/: mod.rs
archive/n_queens_2/: Cargo.toml  lib.rs  operators.rs
archive/plot_utils/: Cargo.toml  lib.rs
archive/plotters_piston/: backend.rs  lib.rs
assets/: solution.xml  solution_41.xml  solution_43.xml  solution_68.xml  solution_85.xml  solution_h_0.xml  solution_h_10.xml  solution_h_5.xml  solution_h_6.xml  solution_h_7.xml  test copy.xml  test.xml
assets/xhstt-2014a/: All11.xml  All15.xml
assets/xhstt-2024a/: All11.xml
docs/: main.md
docs/xhstt/: main.md
examples/bits_demo/: Cargo.toml  main.rs
examples/bits_vs_bitvec/: Cargo.toml
examples/bits_vs_bitvec/benches/: bench.rs
examples/control_circuits_demo/: Cargo.toml  logger.rs  main.rs
examples/playground/: main.rs  main_bitvec.rs  main_plotters_cpu.rs  main_rerun.rs
lib/alg_1/: Cargo.toml  crossover.rs  fitness.rs  lib.rs  mutation.rs  population.rs  replace.rs  selection.rs  stats.rs
lib/alg_10/: Cargo.toml  lib.rs
lib/alg_10/encoding/: constraints.rs  context.rs  genotype.rs  mod.rs  objective_value.rs  phenotype.rs
lib/alg_10/operators/: crossover.rs  mod.rs
lib/alg_11/: Cargo.toml  lib.rs
lib/alg_11/dynamics/: gauss_rand_time.rs  inc_lin_rnk_sel_pressure.rs  mod.rs  mut_rate_cos.rs  state_machine.rs  var_mut_rate_target_mean_sin.rs
lib/alg_11/encoding/: constraints.rs  context.rs  genotype.rs  objective_value.rs  phenotype.rs
lib/alg_11/operators/: crossover.rs  mutation.rs
lib/alg_12/: Cargo.toml  lib.rs
lib/alg_12/dynamics/: gauss_rand_event.rs  inc_lin_rnk_sel_pressure.rs  mod.rs  mut_rate_cos.rs  state_machine.rs  template.rs_  var_mut_rate_target_mean_sin.rs
lib/alg_12/encoding/: constraints.rs  context.rs  genotype.rs  phenotype.rs
lib/alg_12/operators/: crossover.rs  mutation.rs
lib/alg_2/: Cargo.toml  lib.rs  stats.rs
lib/alg_3/: crossover.rs  fitness.rs  lib.rs  mutation.rs  population.rs  selection.rs
lib/alg_4/: Cargo.toml  lib.rs  utils.rs
lib/alg_5/: Cargo.toml  lib.rs
lib/alg_6/: Cargo.toml  encoding.rs  lib.rs  logger.rs  operators.rs
lib/alg_6/dynamics/: mod.rs
lib/alg_6/encoding/: constraints.rs  context.rs  genotype.rs  mod.rs  phenotype.rs
lib/alg_6/operators/: crossover.rs  mutation.rs
lib/alg_6/utils/: beta_dist.rs  beta_distr.rs  mod.rs  normal_dist.rs
lib/alg_7/: Cargo.toml  lib.rs  logger.rs
lib/alg_8/: Cargo.toml  lib.rs
lib/alg_9/: Cargo.toml  lib.rs
lib/bits/: Cargo.toml  generator.rs  lib.rs  tests.rs
lib/bits/cols/: mod.rs  (+1 more)
lib/control_circuits/: Cargo.toml  lib.rs  pt1.rs  pt2.rs
lib/ga/: Cargo.toml  README.md  builder.rs  lib.rs  report.rs  runtime_data.rs
lib/ga/dynamics/: builder.rs  mod.rs
lib/ga/encoding/: builder.rs  context.rs  genotype.rs  mod.rs  objective_value.rs  phenotype.rs
lib/ga/operators/: mod.rs
lib/ga/operators/crossover/: mod.rs  multi_point.rs  ordered.rs  pmx.rs  single_point.rs  uniform.rs
lib/ga/operators/mutation/: mod.rs  randomize.rs  swap.rs
lib/ga/parameters/: adaption.rs  crossover.rs  logger.rs  mod.rs  mutation.rs  offspring_rejection.rs  replacement.rs  selection.rs  termination.rs
lib/ga/process/: mod.rs  rejection.rs  replacement.rs  selection.rs  termination.rs
lib/ga/stats/: mod.rs
lib/ga/tools/: mod.rs
lib/ga/tools/rerun/: mod.rs
lib/ga/tools/rerun_logger/: mod.rs
lib/ga/utils/: crossover.rs  mod.rs  mutation.rs
lib/n_queens/: Cargo.toml  lib.rs
lib/n_queens/encoding/: mod.rs
lib/n_queens/operators/: crossover.rs  mod.rs  mutation.rs  rejection.rs
lib/n_queens/replacement/: mod.rs
lib/n_queens/selection/: mod.rs
lib/n_queens/termination/: mod.rs
lib/n_queens/utils/plotter/: mod.rs
lib/n_queens/utils/rerun/: mod.rs
lib/n_queens/utils/stats/: mod.rs
lib/n_queens_2/: encoding.rs  lib.rs
lib/plot_utils/: lib.rs
lib/plotters_piston/: Cargo.toml
lib/xhstt/: Cargo.toml  lib.rs  tools.rs
lib/xhstt/data/: mod.rs
lib/xhstt/db/: mod.rs  stats.rs
lib/xhstt/db/constraints/: assign_time_constraint.rs  avoid_clashes_constraint.rs  mod.rs
lib/xhstt/db/constraints/utils/: applies_to.rs  cost_function.rs  mod.rs
lib/xhstt/db/events/: course.rs  event.rs  event_group.rs  mod.rs
lib/xhstt/db/resources/: mod.rs  resource.rs  resource_group.rs  resource_type.rs
lib/xhstt/db/times/: day.rs  mod.rs  time.rs  time_group.rs  week.rs
lib/xhstt/model/: constraints.rs  events.rs  mod.rs  resources.rs  times.rs
lib/xhstt/model/instances/: constraints.rs  metadata.rs  resources.rs
lib/xhstt/model/solution_groups/solution/: report.rs
lib/xhstt/parser/: mod.rs
lib/xhstt/parser/instances/: constraints.rs
lib/xhstt/parser/metadata/: mod.rs
lib/xhstt/parser/solution_groups/: mod.rs
lib/xhstt/parser/solution_groups/solution/: mod.rs
lib/xhstt/src/: generated.rs  lib.rs  tools.rs
lib/xhstt/src/data/: mod.rs
lib/xhstt/src/model/: mod.rs
lib/xhstt/src/model/instances/: constraints.rs  events.rs  mod.rs  resources.rs  times.rs
lib/xhstt/src/model/solution_groups/: mod.rs
lib/xhstt/src/model/solution_groups/metadata/: mod.rs
lib/xhstt/src/model/solution_groups/solution/: events.rs  mod.rs
lib/xhstt/utils/: limitations.rs  mod.rs
lib/xhstt/xml/: mod.rs
(+84 files in other folders)
