################################################################################
[workspace]
resolver = "2"
members = [
    "bin/*",
    "lib/*",
]

# exclude = []
default-members = [ "bin/solver" ]
# default-members = [ "bin/playground" ]


################################################################################
[workspace.dependencies]
#> lib
alg_1               = { path = "lib/alg_1" }
alg_2               = { path = "lib/alg_2" }
alg_3               = { path = "lib/alg_3" }
alg_4               = { path = "lib/alg_4" }
alg_5               = { path = "lib/alg_5" }
alg_6               = { path = "lib/alg_6" }

ga                  = { path = "lib/ga" }
n_queens            = { path = "lib/n_queens" }
n_queens_2          = { path = "lib/n_queens_2" }

plot_utils          = { path = "lib/plot_utils"}
plotters_piston     = { path = "lib/plotters_piston" }
xhstt               = { path = "lib/xhstt" }

#> remote
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.10.0"

ndarray = { version = "0.16.0", features = ["rayon"] }
ndarray-stats = { version = "0.5.1" }

hashbrown = "0.14.5"
indexmap = "2.2.6"
chrono = "0.4.38"

# xhstt
structstruck = "0.4.1"

# alg_4
genevo = "0.7"

# alg_5
oxigen = "2.2.2"

# data log
rerun = "0.13.0"

# plots
plotters = "0.3.6"
plotters-backend = "0.3.6"
piston_window = "0.132.0"


################################################################################
# Clippy Configuration
[workspace.lints.rust]
# unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"

################################################################################
