################################################################################
[workspace]
resolver = "2"
members = [
    "bin/*",
    "lib/*",

    "archive/*",
]

# exclude = [""]
default-members = [ "bin/solver" ]

################################################################################
[workspace.dependencies]
#> lib
alg_2               = { path = "lib/alg_2" }
alg_3               = { path = "lib/alg_3" }
alg_6               = { path = "lib/alg_6" }
alg_7               = { path = "lib/alg_7" }
alg_8               = { path = "lib/alg_8" }
alg_9               = { path = "lib/alg_9" }
n_queens_2          = { path = "lib/n_queens_2" }

ga                  = { path = "lib/ga" }
xhstt               = { path = "lib/xhstt" }

alg_1               = { path = "archive/alg_1" }
alg_4               = { path = "archive/alg_4" }
alg_5               = { path = "archive/alg_5" }
n_queens            = { path = "archive/n_queens" }
plot_utils          = { path = "archive/plot_utils"}
plotters_piston     = { path = "archive/plotters_piston" }


#> remote
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rayon = "1.10.0"

ndarray = { version = "0.16.0", features = ["rayon"] }
ndarray-stats = { version = "0.5.1" }

hashbrown = "0.14.5"
indexmap = "2.2.6"
chrono = "0.4.38"
itertools = "0.13.0"


# xhstt
structstruck = "0.4.1"

# alg_4
genevo = "0.7"

# alg_5
oxigen = "2.2.2"

# data log
rerun = "0.13.0"

# plots
plotters = "0.3.6"
plotters-backend = "0.3.6"
piston_window = "0.132.0"

# moving average
simple_moving_average = "1.0.2"


################################################################################
# Clippy Configuration
[workspace.lints.rust]
# unsafe_code = "forbid"

[workspace.lints.clippy]
# unwrap_used = "forbid"
# expect_used = "forbid"
type_complexity = "allow"

################################################################################
