################################################################################
[workspace]
resolver = "2"
members = [
    # "archive/*",
    "bin/*",
    "examples/*",
    "lib/*",
]

# exclude = [""]
default-members = [ "bin/solver" ]

################################################################################
[workspace.dependencies]
#> lib
alg_11              = { path = "lib/alg_11" }
alg_12              = { path = "lib/alg_12" }

bits                = { path = "lib/bits" }
control_circuits    = { path = "lib/control_circuits" }
ga                  = { path = "lib/ga" }
shannon_entropy     = { path = "lib/shannon_entropy" }
xhstt               = { path = "lib/xhstt" }

alg_1               = { path = "archive/alg_1" }
alg_2               = { path = "lib/alg_2" }
alg_3               = { path = "lib/alg_3" }
alg_4               = { path = "archive/alg_4" }
alg_5               = { path = "archive/alg_5" }
alg_6               = { path = "lib/alg_6" }
alg_7               = { path = "lib/alg_7" }
alg_8               = { path = "lib/alg_8" }
alg_9               = { path = "lib/alg_9" }
alg_10              = { path = "lib/alg_10" }
n_queens            = { path = "archive/n_queens" }
n_queens_2          = { path = "archive/n_queens_2" }
plot_utils          = { path = "archive/plot_utils"}
plotters_piston     = { path = "archive/plotters_piston" }


#> remote
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rayon = "1.10.0"

ndarray = { version = "0.16.0", features = ["rayon"] }
ndarray-stats = { version = "0.5.1" }
statrs = "0.17.1"

hashbrown = "0.14.5"
indexmap = "2.2.6"
chrono = "0.4.38"
itertools = "0.13.0"
enum-iterator = "2.1.0"


# xhstt
structstruck = "0.4.1"

# alg_4
# genevo = "0.7"

# alg_5
# oxigen = "2.2.2"

# data log
rerun = "0.13.0"
colors-transform = "0.2.11"

# plots
plotters = "0.3.6"
plotters-backend = "0.3.6"
piston_window = "0.132.0"

# moving average
simple_moving_average = "1.0.2"

# bitvec
bitvec = "1.0.1"
bitvec_simd = "0.20.5"
fixedbitset = "0.5.7"

# Benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

# Git
git2 = { version = "0.19.0", default-features = false, features = ["https"] }

# Dotenv (to load .env file)
dotenvy = "0.15.7"

# Errorhandling
thiserror = "1.0.64"

# CSV
csv = "1.3.0"

# Serde
serde = { version = "1.0.210", features = ["derive"] }

# Pushover
pushover = "0.4.0"

# Ctrl+C for gracefully stopping the auto runner 
ctrlc = "3.4.5"


################################################################################
# Clippy Configuration
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# unwrap_used = "forbid"
# expect_used = "forbid"
type_complexity = "allow"
too_long_first_doc_paragraph = "allow"

################################################################################
