[package]
name = "n_queens"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[features]
default = []

[dependencies]
#> lib
xhstt = { workspace = true }
plot_utils = { workspace = true }


#> remote
rand = { workspace = true }
rayon = { workspace = true }
ndarray = { workspace = true }
hashbrown = { workspace = true }

plotters = { workspace = true }
plotters_piston = { workspace = true }
piston_window = { workspace = true }

rerun = { workspace = true }

[lints]
workspace = true
