[package]
name = "plot_utils"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[features]
default = []

[dependencies]
#> lib
plotters_piston = { workspace = true }

#> remote
ndarray = { workspace = true }
ndarray-stats = { workspace = true }

plotters = { workspace = true }
plotters-backend = { workspace = true }
piston_window = { workspace = true }

[lints]
workspace = true
