[package]
name = "alg_5"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
#> lib
xhstt = { workspace = true }

#> remote
rand = { workspace = true }
# rayon = { workspace = true }
# hashbrown = { workspace = true }
oxigen = { workspace = true }
ndarray = { workspace = true }

[lints]
workspace = true
