[package]
name = "alg_6"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
#> lib
xhstt = { workspace = true }
ga = { workspace = true }

#> remote
rand = { workspace = true }
rand_distr = { workspace = true }
simple_moving_average = { workspace = true }

ndarray = { workspace = true }
hashbrown = { workspace = true }


[lints]
workspace = true
