[package]
name = "ga"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[features]
default = [
    "cache",
    "rerun_logger",

    # "log_pop_stats",
    # "log_ov_dist",
    # "log_diversity",
    # "log_cache_hits",
    # "log_runtimes",
]

cache           = []
rerun_logger    = ["dep:rerun"]

log_pop_stats   = ["rerun_logger"]
log_ov_dist     = ["rerun_logger"]
log_diversity   = ["rerun_logger"]
log_cache_hits  = ["rerun_logger", "cache"]
log_runtimes    = ["rerun_logger"]


[dependencies]
#> lib
xhstt = { workspace = true }

#> remote
rand = { workspace = true }
rayon = { workspace = true }
ndarray = { workspace = true }
hashbrown = { workspace = true }
simple_moving_average = { workspace = true }

rerun = { workspace = true, optional = true }

[lints]
workspace = true
