[package]
name = "n_queens"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[features]
default = []

[dependencies]
#> lib
xhstt = { workspace = true }
ga = { workspace = true }

#> remote
rand = { workspace = true }
# rayon = { workspace = true }
ndarray = { workspace = true }
hashbrown = { workspace = true }


[lints]
workspace = true
