[package]
name = "xhstt"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
#> lib

#> remote
serde = { version = "1.0.204", features = ["derive"] }
quick-xml = { version = "0.36.0", features = ["serialize"] }
xmltree = "0.10.3"

hashbrown = { workspace = true }
indexmap = { workspace = true }
structstruck = { workspace = true }
chrono = { workspace = true }
enum-iterator = { workspace = true }

[lints]
workspace = true
